--- a/main.css
+++ b/main.css
@@ -52,6 +52,47 @@
   left: 117px;
 }
 
+.modal {
+  background: rgba(0, 0, 0, 0.5);
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  overflow: auto;
+}
+
+.modal .modal-content {
+  background: #FFFFFF;
+  border-radius: 10px;
+  width: 90%;
+  margin: 0 auto;
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
+.modal-banner {
+  background: #F2F2F2;
+  height: 300px;
+}
+
+.mt-neg-90 {
+  margin-top: -90px;
+}
+
+.modal-star {
+  position: absolute;
+  left: 56px;
+  bottom: -10px;
+}
+
+.close {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  color: white;
+}
+
 @media (min-width: 767px) {
   .banner {
     height: 400px;
@@ -59,5 +100,13 @@
 
   .min-w-md-auto {
     min-width: initial;
+  }
+
+  .modal .modal-content {
+    width: 740px;
+  }
+
+  .modal-banner {
+    height: 400px;
   }
 }
